Fix extra padding intro section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ header {
 }
 
 .reasons {
-  margin: 1em 0 3rem;
+  margin: 0rem 0rem 2rem;
 }
 
 #reasons-list {
